2006-04-19  Chris Lumens  <clumens@redhat.com>

	* pykickstart/constants.py:  Start CLEARPART_ constants at 0.

2006-04-13  Chris Lumens  <clumens@redhat.com>

	* pykickstart/data.py (KickstartRepoData):  Added.
	(KickstartRaidData):  Initialize members to a list instead of string.
	(KickstartVolGroupData):  Likewise.
	* pykickstart/parser.py (KickstartHandlers.doRepo):  Add options.
	* pykickstart/writer.py (KickstartWriter.doRepo):  Likewise.
	(KickstartWriter.doPackages):  Reorder package output.  Output header
	options.

2006-04-11  Chris Lumens  <clumens@redhat.com>

	* pykickstart/parser.py (KickstartParser.addPackages):  Ignore
	whitespace before group names (#188095).

2006-03-27  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  Bump version.

	* pykickstart/data.py (KickstartData.__init__):  Add support for the
	logging command.
	* pykickstart/writer.py (KickstartWriter.doLogging):  Likewise.
	(KickstartWriter.doRepo):  Stub out funtion for the future.
	* pykickstart/parser.py (KickstartHandlers.doLogging):  Likewise.
	(KickstartHandlers.doRepo):  Stub out function for the future.

2006-03-27  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  Bump version.

	* pykickstart/writer.py (KickstartWriter.doXConfig):  Don't write out
	a blank xconfig line.

2006-03-13  Chris Lumens  <clumens@redhat.com>

	* pykickstart/writer.py (KickstartWriter.__init__):  Reorder output
	handlers.

2006-03-07  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  Bump version.

	* pykickstart/parser.py (KickstartHandlers.doZeroMbr):  Backwards
	compatibility support for options to zerombr.

2006-02-24  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  Bump version.

	* pykickstart/parser.py (KickstartHandlers.doIgnoreDisk):  Get ksdata
	from the correct option parser variable (#182934).

2006-02-17  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  Bump version.
